--- a/src/index.html
+++ b/src/index.html
@@ -27,36 +27,18 @@
   </head>
   <body class="page__body">
     <header class="header page__header" id="header">
-      <div class="header__top">
-        <a href="./" class="logo">
-          <img
-            class="logo__image"
-            src="./images/icons/namu-logo.svg"
-            alt="namu logo"
-          >
-        </a>
-      </div>
-
       <a
         href="#menu"
         class="header__menu page__icon"
       ></a>
 
-      <div class="header__bottom">
-        <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
-        <a href="/" class="tickets header__tickets">
-          <div class="tickets__text">
-            Квитки
-          </div>
-          <div class="tickets__arrow">
-            <img
-            src="./images/icons/arrow.svg"
-            alt="arrow"
-            class="tickets__image"
-          >
-          </div>
-        </a>
-      </div>
+      <a href="./" class="header__logo">
+        <img
+          src="./images/icons/namu-logo.svg"
+          alt="namu logo"
+          class="header__img"
+        >
+      </a>
     </header>
 
     <aside class="menu page__menu" id="menu">
@@ -79,10 +61,10 @@
               </a>
             </li>
           </div>
-          <div class="menu_wrap">
+          <div class="menu__wrap">
             <li class="menu__item">
               <a class="menu__link" href="#subscription">
-                Підписка
+                Про Нас
               </a>
             </li>
             <li class="menu__item">
@@ -96,86 +78,111 @@
       </nav>
 
       <div class="menu__grafic grafic">
-        <p class="grafic__text">
+        <p class="grafic__title">
           Графік роботи
         </p>
 
         <div class="grafic__week">
-          <p class="grafic__time">12:00 — 20:00</p> середа
-          </br>
-          <p class="grafic__time">12:00 — 20:00</p> четвер
-          </br>
-          <p class="grafic__time">12:00 — 20:00</p> п’ятниця
-          </br>
-          <p class="grafic__time">11:00 — 19:00</p> субота
-          </br>
-          <p class="grafic__time">11:00 — 19:00</p> неділя
+          <p><span class="grafic__bold">12:00 — 20:00</span> середа</p>
+          <p><span class="grafic__bold">12:00 — 20:00</span> четвер</p>
+          <p><span class="grafic__bold">12:00 — 20:00</span> п’ятниця</p>
+          <p><span class="grafic__bold">11:00 — 19:00</span> субота</p>
+          <p><span class="grafic__bold">11:00 — 19:00</span> неділя</p>
         </div>
 
+
         <div class="grafic__kasa">
-          <p class="grafic__weekend">Вихідні:</p> понеділок, вівторок
-          <br>Каса припиняє роботу за 1 годину
-          до закриття музею
+          <p><span class="grafic__bold">Вихідні:</span> понеділок, вівторок
+          <br>Каса припиняє роботу за 1 годину до закриття музею</p>
         </div>
       </div>
+
+
     </aside>
 
     <a href="#" class="page__wrapper"></a>
 
-    <main class="main page__main">
-      <section id="events" class="events main__section">
+    <main class="page__main">
+      <section id="museum" class="museum">
+        <div class="museum__top">
+        </div>
+
+        <div class="museum__bottom">
+          <h1 class="museum__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+          <a href="/" class="tickets museum__tickets">
+            <div class="tickets__text">
+              Квитки
+            </div>
+            <div class="tickets__arrow">
+              <img
+              src="./images/icons/arrow.svg"
+              alt="arrow"
+              class="tickets__image"
+            >
+            </div>
+          </a>
+        </div>
+      </section>
+
+      <section id="events" class="events page__events">
         <h2 class="events__title page__title">Актуальні події</h2>
-        <article class="article events__article article--padding">
+        <article class="article events__article">
           <img
             src="./images/images/event_1.jpg"
             alt="image"
             class="article__image"
           >
 
-          <div class="article__date">
-            <p>ВИСТАВКА</p>
-            <p class="article__dating">26.08-29.11.2019</p>
+          <div class="article__wrap">
+            <div class="article__date">
+              <p>ВИСТАВКА</p>
+              <p class="article__dating">26.08-29.11.2019</p>
+            </div>
+            <h3 class="article__title">Йду і повертаюсь</h3>
+            <p class="article__text">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980&nbsp;-1995 років.</p>
           </div>
-          <h3 class="article__title">Йду і повертаюсь</h3>
-          <p class="article__text">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980&nbsp;-1995 років.</p>
         </article>
 
-        <article class="article events__article article--padding">
+        <article class="article events__article">
           <img
             src="./images/images/event_2.jpg"
             alt="image"
             class="article__image"
           >
 
-          <div class="article__date">
-            <p>ВИСТАВКА</p>
-            <p class="article__dating">26.08-29.11.2019</p>
-          </div>
-          <h3 class="article__title">І спогади і мрії</h3>
-          <p class="article__text">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
-        </article>
-
-        <article class="article events__article">
-          <img
-            src="./images/images/event_3.jpg"
-            alt="image"
-            class="article__image"
-          >
-
-          <div class="article__wrapper">
-            <div class="article__date article__date--up">
-              <p>ЛЕКЦІЯ</p>
-              <p class="article__dating">26/08/2019 - 11:00</p>
+          <div class="article__wrap">
+            <div class="article__date">
+              <p>ВИСТАВКА</p>
+              <p class="article__dating">26.08-29.11.2019</p>
             </div>
-            <h3 class="article__title article__title--rectangle--no">Від класицизму до романтизму</h3>
+            <h3 class="article__title">І спогади і мрії</h3>
+            <p class="article__text">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
           </div>
         </article>
       </section>
 
-      <section id="gallery" class="gallery main__section">
+      <section class="romantic">
+        <img
+          srcset="./images/images/event_3-desktop.jpg  1024w,
+            ./images/images/event_3.jpg 640w"
+          src="./images/images/event_3.jpg"
+          alt="image"
+          class="romantic__image"
+        />
+
+        <div class="romantic__wrap">
+          <div class="romantic__date">
+            <p>ЛЕКЦІЯ</p>
+            <p class="romantic__dating">26/08/2019 - 11:00</p>
+          </div>
+          <h3 class="romantic__title">Від класицизму до романтизму</h3>
+        </div>
+      </section>
+
+      <section id="gallery" class="gallery">
         <h2 class="gallery__title page__title">Галерея</h2>
         <div class="gallery__grid">
-          <div class="gallery__wrapper">
+          <div class="gallery__wrapper gallery__wrapper--4">
             <img
               src="./images/gallery/gallery_1.jpg"
               alt="folk costume"
@@ -183,7 +190,7 @@
             >
           </div>
 
-          <div class="gallery__wrapper">
+          <div class="gallery__wrapper gallery__wrapper--8">
             <img
               src="./images/gallery/gallery_2.jpg"
               alt="Ukrainian house"
@@ -191,7 +198,7 @@
             >
           </div>
 
-          <div class="gallery__wrapper">
+          <div class="gallery__wrapper gallery__wrapper--8  gallery__wrapper--row--2">
             <img
               src="./images/gallery/gallery_3.jpg"
               alt="
@@ -200,7 +207,7 @@
             >
           </div>
 
-          <div class="gallery__wrapper">
+          <div class="gallery__wrapper gallery__wrapper--4  gallery__wrapper--row--2">
             <img
               src="./images/gallery/gallery_4.jpg"
               alt="sea"
@@ -212,8 +219,8 @@
         <div class="gallery__slider"></div>
       </section>
 
-      <section id="subscription" class="subscription main__section">
-        <h2 class="subscription__title page__title">Підписка</h2>
+      <section id="subscription" class="subscription">
+        <h2 class="page__title subscription__title">Підписка</h2>
         <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
         <form action="" class="form subscription__email">
           <div class="form__text">
@@ -221,52 +228,57 @@
               type="email"
               name="email"
               placeholder="E-mail"
-              class="subscription__input"
+              class="form__input"
+              required
             >
           </div>
-          <div class="form__arrow">
+          <button class="form__arrow" type="submit">
             <img
             src="./images/icons/arrow-black.svg"
             alt="arrow"
             class="form__image"
           >
-          </div>
+          </button>
         </form>
       </section>
 
-      <section id="contacts" class="contacts main__section">
+      <section id="contacts" class="contacts">
         <div class="contacts__top">
-          <img src="./images/icons/logo-contact.svg" alt="logo" class="contacts__logo">
-
+          <a href="#">
+            <img
+              src="./images/icons/logo-contact.svg"
+              alt="logo"
+              class="contacts__logo"
+            >
+          </a>
           <div class="contacts__social">
-            <img src="./images/icons/facebook.svg" alt="facebook">
-            <img src="./images/icons/instagram.svg" alt="instagram">
+            <a href="https://www.facebook.com/namu.museum" target="_blank">
+              <img src="./images/icons/facebook.svg" alt="facebook">
+            </a>
+            <a href="https://www.instagram.com/namu.museum/" target="_blank">
+              <img src="./images/icons/instagram.svg" alt="instagram">
+            </a>
           </div>
         </div>
 
         <div class="contacts__wrapper">
           <div class="contacts__grafic grafic">
-            <p class="grafic__text">
+            <p class="grafic__title">
               Графік роботи
             </p>
 
-            <div class="grafic__week">
-              <p class="grafic__time">12:00 — 20:00</p> середа
-              </br>
-              <p class="grafic__time">12:00 — 20:00</p> четвер
-              </br>
-              <p class="grafic__time">12:00 — 20:00</p> п’ятниця
-              </br>
-              <p class="grafic__time">11:00 — 19:00</p> субота
-              </br>
-              <p class="grafic__time">11:00 — 19:00</p> неділя
+            <div class="grafic__week grafic__week--contacts">
+              <p><span class="grafic__bold">12:00 — 20:00</span> середа</p>
+              <p><span class="grafic__bold">12:00 — 20:00</span> четвер</p>
+              <p><span class="grafic__bold">12:00 — 20:00</span> п’ятниця</p>
+              <p><span class="grafic__bold">11:00 — 19:00</span> субота</p>
+              <p><span class="grafic__bold">11:00 — 19:00</span> неділя</p>
             </div>
 
-            <div>
-              <p>Вихідні: понеділок, вівторок
-              <br>Каса припиняє роботу за 1 годину
-              до закриття музею
-            </div>
+            <div class="grafic__kasa">
+              <p><span class="grafic__bold">Вихідні:</span> понеділок, вівторок
+              <br>Каса припиняє роботу за 1 годину до закриття музею</p>
+            </div> 
           </div>
 
           <div class="contacts__contact">
@@ -275,13 +287,12 @@
             </p>
 
             <p class="contacts__adress">вул. М. Грушевського, 6; Київ, 01001
-              </br>тел. +38 (044) 278-13-57
-              </br>факс +38 (044) 278-74-54
+              </br>тел. +38 (044) <span class="contacts--nowrap">278-13-57</span>
+              </br>факс +38 (044) <span class="contacts--nowrap">278-13-57</span>
               </br>e-mail: info@namu.kiev.ua</p>
           </div>
 
           <a href="#header" class="contacts__arrow">
-
           </a>
         </div>
 
@@ -294,7 +305,7 @@
             </li>
             <li class="contacts__item">
               <a class="contacts__link" href="#subscription">
-                Підписка
+                Про нас
               </a>
             </li>
             <li class="contacts__item">
