museum-landing hover efects complete

--- a/src/index.html
+++ b/src/index.html
@@ -342,6 +342,11 @@
                   alt="facebook"
                   class="footer__social-image icon"
                 >
+                <img
+                  src="images/icons/facebook-hover.svg"
+                  alt="facebook"
+                  class="footer__social-image-hover icon"
+                >
               </a>
               <a
                 href="https://www.instagram.com/"
@@ -352,6 +357,11 @@
                   src="images/icons/instagram.svg"
                   alt="instagram"
                   class="footer__social-image icon"
+                >
+                <img
+                  src="images/icons/instagram-hover.svg"
+                  alt="instagram"
+                  class="footer__social-image-hover icon"
                 >
               </a>
             </div>
