--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,365 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-schedule=1.0">
+    <title>NAMU</title>
+    <link
+      rel="icon"
+      href="images/logo/namu-logo.svg"
+      type="image/svg"
+    >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header">
+      <div class="flex-container">
+        <div class="header__container">
+          <div class="header__image">
+            <a href="#menu" class="header__menu header__menu--on-mobile icon icon--menu">
+            </a>
+
+            <a href="#" class="header__logo">
+              <img
+                src="./images/logo/namu-logo.svg"
+                alt="Namu logo"
+                class="logo logo--header-mobile"
+              >
+            </a>
+
+          </div>
+          <div class="header__content">
+            <a href="#menu" class="header__menu icon icon--menu"></a>
+
+            <h1 class="title  title--main header__title">Художній Музей</h1>
+            <a href="#events" class="header__tickets">
+              <div class="header__text">Квитки</div>
+              <div class="square-button square-button--tickets"><span class="icon icon--tickets"></span></div>
+            </a>
+            <div class="header__events">Події</div>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <aside class="page__menu menu" id="menu">
+      <div class="menu__flex-container flex-container">
+        <div class="container menu__container">
+          <div class="menu__nav-block">
+
+            <a href="#" class="menu__close icon icon--close"></a>
+
+            <nav class="menu__nav nav">
+
+              <ul class="nav__list">
+                <div class="nav__list-block">
+                  <li class="nav__item">
+                    <a href="#galery" class="nav__link">Галерея</a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#events" class="nav__link">Виставки та події</a>
+                  </li>
+                </div>
+
+                <div class="nav__list-block">
+                  <li class="nav__item">
+                    <a href="#subscription" class="nav__link">Про Нас</a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#contacts" class="nav__link">Контакти</a>
+                  </li>
+                </div>
+              </ul>
+            </nav>
+          </div>
+
+          <div class="menu__schedule schedule">
+            <div class="schedule__content">
+              <h6 class="schedule__title title title--schedule">Графік роботи</h6>
+              <ul class="schedule__list">
+                <li class="schedule__item"><span class="schedule__bold">12:00 — 20:00</span> середа</li>
+                <li class="schedule__item"><span class="schedule__bold">12:00 — 20:00</span> четвер</li>
+                <li class="schedule__item"><span class="schedule__bold">12:00 — 20:00</span> п’ятниця</li>
+                <li class="schedule__item"><span class="schedule__bold">11:00 — 19:00</span> субота</li>
+                <li class="schedule__item"><span class="schedule__bold">11:00 — 19:00</span> неділя</li>
+              </ul>
+            </div>
+
+            <p class="schedule__weekend">
+              <span class="schedule__bold">Вихідні:</span> понеділок, вівторок <br> Каса припиняє роботу за 1 годину до закриття музею
+            </p>
+          </div>
+        </div>
+      </div>
+    </aside>
+
+    <div class="page__arrow-up flex-container">
+      <div class="container page__arrow-container">
+        <a href="#" class="icon icon--arrow-up">
+        </a>
+      </div>
+    </div>
+
+
+    <main>
+      <section class="events" id="events">
+        <div class="events__flax-container flex-container">
+          <div class="events__container container">
+
+            <h3 class="title events__title title--events">Актуальні події</h3>
+            <article class="events__event event animated">
+              <img
+                class="event__image"
+                src="./images/events/image-1.png"
+                alt="Landscape"
+              >
+              <div class="event__content">
+                <div class="event__subtitle-dates subtitle-dates">
+                  <h5 class="title title--subtitle">Виставка</h5>
+                  <p class="subtitle-dates__dates">26.08-29.11.2019</p>
+                </div>
+
+                <div class="event__title-block">
+                  <h4 class="title event__title">Йду і повертаюсь</h4>
+                  <div class="event__square-after-title"></div>
+                </div>
+
+                <p class="event__description">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої
+                  половини 1980-1995 років.
+                </p>
+              </div>
+            </article>
+
+            <article class="events__event event animated">
+              <img
+              class="event__image"
+              src="./images/events/image-2.png"
+              alt="Girl and peacock"
+              >
+
+              <div class="event__content">
+                <div class="event__subtitle-dates subtitle-dates">
+                  <h5 class="title title--subtitle">Виставка</h5>
+                  <p class="subtitle-dates__dates">26.08-29.11.2019</p>
+                </div>
+
+                <div class="event__title-block">
+                  <h4 class="title event__title">І спогади і мрії</h4>
+                  <div class="event__square-after-title"></div>
+                </div>
+
+                <p class="event__description">
+                  Національний художній музей України до 100 річчя від дня народження видатної української художниці Тетяни Яблонської
+                  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+              </div>
+            </article>
+
+          </div>
+        </div>
+      </section>
+
+      <section class="lection">
+        <div class="lection__flex-container flex-container">
+          <div class="lection__image-container">
+            <div class="lection__container">
+              <div class="lection__content animated">
+                <div class="lection__subtitle-dates subtitle-dates">
+                  <h5 class="title title--subtitle ">Лекція</h5>
+                  <p class="subtitle-dates__dates">26/08/2019 - 11:00</p>
+                </div>
+
+                <h4 class="title lection__title">Від класицизму до романтизму</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="galery" id="galery">
+        <div class="flex-container">
+          <div class="container galery__container">
+            <h3 class="title galery__title title--galery">Галерея</h3>
+            <div class="slider galery__slider">
+              <div class="slider__line">
+                <img
+                  src="./images/galery/galery-1.png"
+                  alt="Woman in national ukrainian closes"
+                  class="slider__image"
+                >
+                <img
+                  src="./images/galery/galery-3.png"
+                  alt="Geese"
+                  class="slider__image"
+                >
+                <img
+                  src="./images/galery/galery-2.png"
+                  alt="House in the winter village "
+                  class="slider__image"
+                >
+                <img
+                  src="./images/galery/galery-4.png"
+                  alt="Summer sea and people on the beach"
+                  class="slider__image"
+                >
+              </div>
+              <div class="slider__dot-wrapper">
+                <div class="slider__dot"></div>
+                <div class="slider__dot"></div>
+                <div class="slider__dot"></div>
+                <div class="slider__dot"></div>
+              </div>
+            </div>
+            <img
+              src="./images/galery/galery-1.png"
+              alt="Woman in national ukrainian closes"
+              class="galery__painting galery__painting--1 animated"
+            >
+            <img
+            src="./images/galery/galery-2.png"
+            alt="House in the winter village "
+            class="galery__painting galery__painting--2 animated"
+            >
+            <img
+              src="./images/galery/galery-5.png"
+              alt="Girl on the bench"
+              class="galery__painting galery__painting--3 animated"
+            >
+            <img
+              src="./images/galery/galery-4.png"
+              alt="Summer sea and people on the beach"
+              class="galery__painting galery__painting--4 animated"
+            >
+
+          </div>
+        </div>
+      </section>
+
+      <section class="subscription" id="subscription">
+        <div class="flex-container">
+          <div class="subscription__container">
+            <article class="subscription__content animated">
+              <h3 class="subscription__title title title--subscription">Підписка</h3>
+              <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
+              <form
+                action="#"
+                method="post"
+                class="subscription__form"
+                onsubmit="this.reset(); return false;"
+              >
+                <input
+                  class="subscription__input"
+                  type="email"
+                  name="email"
+                  placeholder="E-mail"
+                  required
+                >
+                <button type="submit" class="subscription__button square-button square-button--subscription">
+                  <span class="icon icon--subscription"></span>
+                </button>
+              </form>
+            </article>
+          </div>
+        </div>
+      </section>
+
+    </main>
+
+    <footer class="footer">
+      <div class="flex-container">
+        <div class="container">
+          <div class="footer__logo-and-socials">
+
+            <a href="#" class="footer__logo">
+              <img
+                src="./images/logo/namu-logo.svg"
+                alt="Namu logo"
+                class="logo">
+            </a>
+
+            <div class="footer__socials">
+              <a
+                href="https://uk-ua.facebook.com/"
+                class="icon icon--facebook"
+                target="_blank">
+              </a>
+              <a
+                href="https://www.instagram.com/"
+                class="icon icon--instagram"
+                target="_blank">
+              </a>
+            </div>
+          </div>
+
+          <div class="footer__schedule schedule schedule--footer">
+            <div class="schedule__content">
+              <h6 class="schedule__title title title--schedule">Графік роботи</h6>
+              <ul class="schedule__list">
+                <li class="schedule__item schedule__item--footer"><span class="schedule__bold">12:00 — 20:00</span> середа</li>
+                <li class="schedule__item schedule__item--footer"><span class="schedule__bold">12:00 — 20:00</span> четвер</li>
+                <li class="schedule__item schedule__item--footer"><span class="schedule__bold">12:00 — 20:00</span> п’ятниця</li>
+                <li class="schedule__item schedule__item--footer"><span class="schedule__bold">11:00 — 19:00</span> субота</li>
+                <li class="schedule__item schedule__item--footer"><span class="schedule__bold">11:00 — 19:00</span> неділя</li>
+              </ul>
+            </div>
+
+            <p class="schedule__weekend schedule__weekend--footer">
+              <span class="schedule__bold">Вихідні:</span> понеділок, вівторок <br> Каса припиняє роботу за 1 годину до закриття музею
+            </p>
+          </div>
+
+          <div class="footer__contacts" id="contacts">
+            <h6 class="title footer__title-contacts">Контакти:</h6>
+            <article class="footer__contacts-text">
+              <a
+                href="https://goo.gl/maps/P386NKwWrRQ8B1gf6"
+                target="_blank"
+                class="footer__contact"
+              >
+                вул. М. Грушевського, 6; Київ, 01001
+              </a>
+              <a href="tel:+38(044) 278-13-57" class="footer__contact">тел. +38 (044) 278-13-57</a>
+              <a href="tel:+38(044) 278-13-57" class="footer__contact">факс +38 (044) 278-74-54</a>
+              <a href="mailto:info@namu.kiev.ua" class="footer__contact">e-mail: info@namu.kiev.ua</a>
+            </article>
+          </div>
+
+          <nav class="footer__nav nav">
+            <ul class="nav__list nav__list--footer">
+              <div class="nav__list-block nav__list-block--footer">
+                <li class="nav__item">
+                  <a href="#galery" class="nav__link nav__link--footer">Галерея</a>
+                </li>
+                <li class="nav__item">
+                  <a href="#events" class="nav__link nav__link--footer">Виставки та події</a>
+                </li>
+              </div>
+
+              <div class="nav__list-block nav__list-block--footer">
+                <li class="nav__item">
+                  <a href="#subscription" class="nav__link nav__link--footer">Про Нас</a>
+                </li>
+                <li class="nav__item">
+                  <a href="#contacts" class="nav__link nav__link--footer">Контакти</a>
+                </li>
+              </div>
+            </ul>
+
+          </nav>
+
+          <div class="footer__bottom footer__bottom--designed">Designed by Zhyriada Marina</div>
+          <div class="footer__bottom footer__bottom--copyright">Copyright © 2019. All Rights Reserved.</div>
+        </div>
+      </div>
+
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
