--- a/src/index.html
+++ b/src/index.html
@@ -138,7 +138,7 @@
               <p>ВИСТАВКА</p>
               <p class="article__dating">26.08-29.11.2019</p>
             </div>
-            <h3 class="article__title">Йду і повертаюсь</h3>
+            <a href="#" class="article__title">Йду і повертаюсь</a>
             <p class="article__text">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980&nbsp;-1995 років.</p>
           </div>
         </article>
@@ -155,7 +155,7 @@
               <p>ВИСТАВКА</p>
               <p class="article__dating">26.08-29.11.2019</p>
             </div>
-            <h3 class="article__title">І спогади і мрії</h3>
+            <a href="#" class="article__title">І спогади і мрії</a>
             <p class="article__text">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
           </div>
         </article>
@@ -175,7 +175,7 @@
             <p>ЛЕКЦІЯ</p>
             <p class="romantic__dating">26/08/2019 - 11:00</p>
           </div>
-          <h3 class="romantic__title">Від класицизму до романтизму</h3>
+          <a href="#" class="romantic__title">Від класицизму до романтизму</a>
         </div>
       </section>
 
@@ -278,7 +278,7 @@
             <div class="grafic__kasa">
               <p><span class="grafic__bold">Вихідні:</span> понеділок, вівторок
               <br>Каса припиняє роботу за 1 годину до закриття музею</p>
-            </div> 
+            </div>
           </div>
 
           <div class="contacts__contact">
