--- a/src/index.html
+++ b/src/index.html
@@ -401,7 +401,7 @@
                   тел. +38 (044) 278-13-57
                 </a>
                 <a
-                  href="#"
+                  href="tel:+380442787454"
                   class="footer__info-link"
                 >
                   факс +38 (044) 278-74-54
