--- a/src/index.html
+++ b/src/index.html
@@ -26,13 +26,72 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page__body">
-    <header class="header page__header" id="header">
+    <aside class="page__menu">
+      <div class="menu" id="menu">
+        <a
+          href="#"
+          class="menu__close page__icon"
+        ></a>
+
+        <nav class="menu__nav">
+          <ul class="menu__list">
+            <div class="menu__wrap">
+              <li class="menu__item">
+                <a class="menu__link" href="#gallery">
+                  Галерея
+                </a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="#events">
+                  Виставки та події
+                </a>
+              </li>
+            </div>
+            <div class="menu__wrap">
+              <li class="menu__item">
+                <a class="menu__link" href="#subscription">
+                  Про Нас
+                </a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="#contacts">
+                  Контакти
+                </a>
+              </li>
+            </div>
+
+          </ul>
+        </nav>
+
+        <div class="menu__grafic grafic">
+          <p class="grafic__title">
+            Графік роботи
+          </p>
+
+          <div class="grafic__week">
+            <p><span class="grafic__bold">12:00 — 20:00</span> середа</p>
+            <p><span class="grafic__bold">12:00 — 20:00</span> четвер</p>
+            <p><span class="grafic__bold">12:00 — 20:00</span> п’ятниця</p>
+            <p><span class="grafic__bold">11:00 — 19:00</span> субота</p>
+            <p><span class="grafic__bold">11:00 — 19:00</span> неділя</p>
+          </div>
+
+
+          <div class="grafic__kasa">
+            <p><span class="grafic__bold">Вихідні:</span> понеділок, вівторок
+            <br>Каса припиняє роботу за 1 годину до закриття музею</p>
+          </div>
+        </div>
+      </div>
+    </aside>
+
+    <header class="header page__header page__container" id="header">
       <a
         href="#menu"
         class="header__menu page__icon"
       ></a>
 
-      <a href="./" class="header__logo">
+      <a href="#" class="header__logo">
         <img
           src="./images/icons/namu-logo.svg"
           alt="namu logo"
@@ -40,65 +99,6 @@
         >
       </a>
     </header>
-
-    <aside class="menu page__menu" id="menu">
-      <a
-        href="#"
-        class="menu__close page__icon"
-      ></a>
-
-      <nav class="menu__nav">
-        <ul class="menu__list">
-          <div class="menu__wrap">
-            <li class="menu__item">
-              <a class="menu__link" href="#gallery">
-                Галерея
-              </a>
-            </li>
-            <li class="menu__item">
-              <a class="menu__link" href="#events">
-                Виставки та події
-              </a>
-            </li>
-          </div>
-          <div class="menu__wrap">
-            <li class="menu__item">
-              <a class="menu__link" href="#subscription">
-                Про Нас
-              </a>
-            </li>
-            <li class="menu__item">
-              <a class="menu__link" href="#contacts">
-                Контакти
-              </a>
-            </li>
-          </div>
-
-        </ul>
-      </nav>
-
-      <div class="menu__grafic grafic">
-        <p class="grafic__title">
-          Графік роботи
-        </p>
-
-        <div class="grafic__week">
-          <p><span class="grafic__bold">12:00 — 20:00</span> середа</p>
-          <p><span class="grafic__bold">12:00 — 20:00</span> четвер</p>
-          <p><span class="grafic__bold">12:00 — 20:00</span> п’ятниця</p>
-          <p><span class="grafic__bold">11:00 — 19:00</span> субота</p>
-          <p><span class="grafic__bold">11:00 — 19:00</span> неділя</p>
-        </div>
-
-
-        <div class="grafic__kasa">
-          <p><span class="grafic__bold">Вихідні:</span> понеділок, вівторок
-          <br>Каса припиняє роботу за 1 годину до закриття музею</p>
-        </div>
-      </div>
-
-
-    </aside>
 
     <a href="#" class="page__wrapper"></a>
 
@@ -109,7 +109,7 @@
 
         <div class="museum__bottom">
           <h1 class="museum__title">ХУДОЖНІЙ МУЗЕЙ</h1>
-          <a href="/" class="tickets museum__tickets">
+          <a href="#" class="tickets museum__tickets">
             <div class="tickets__text">
               Квитки
             </div>
