museum_second_edition

--- a/src/index.html
+++ b/src/index.html
@@ -19,104 +19,106 @@
     <title>Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body class="page__body">
+  <body class="page__body page__body--with-menu">
     <header class="header"> 
       <div class="header__museum"></div>
-      <div class="header__top">
-        <a 
-          href="#menu" 
-          class="header__top--menuLink">
-          <img
-            class="header__top--menuLogo"
-            src="./styles/pictures/menu.svg"
-            alt="logo menu"
-          >
-        </a>
-        <p class="header__top--logo">
-          NA
-          <br>
-          MU
-        </p>
-      </div>
-      <h1 class="header__title">
-        ХУДОЖНІЙ МУЗЕЙ
-      </h1>
-      <div class="header__tickets">
-        <a 
-          href="#actualEvents" 
-          class="header__tickets--button">
-          Квитки
-        </a>
-      </div>
-      <div class="header__events">
-        <p class="header__events--word">
-          ______Події
-        </p>
+      <div class="container">
+        <div class="header__top">
+          <a 
+            href="#menu" 
+            class="header__top--menuLink">
+            <img
+              class="header__top--menuLogo"
+              src="./styles/pictures/menu.svg"
+              alt="logo menu"
+            >
+          </a>
+          <a href="#" class="header__top--logo"> 
+            NA<br>MU  
+          </a>
+        </div>
+        <h1 class="header__title">
+          ХУДОЖНІЙ МУЗЕЙ
+        </h1>
+        <div class="header__tickets">
+          <a 
+            href="#actualEvents" 
+            class="header__tickets--button">
+            Квитки
+          </a>
+        </div>
+        <div class="header__events">
+          <p class="header__events--word">
+            ______Події
+          </p>
+        </div>
       </div>
     </header>
     <nav class="page__menu menu" id="menu">
-      <div class="menuTop">  
-        <div class="menuTop__introduce">
-          <a
-            href="#" 
-            class="menuTop__introduce--logo">
-          </a>
-          <a
-            href="#galery"
-            class="menuTop__introduce--link1">
-            Галерея
-          </a>
-          <a
-            href="#actualEvents"
-            class="menuTop__introduce--link2">
-            Про нас
-          </a>
-          <a
-            href="#subscribe"
-            class="menuTop__introduce--link3">
-            Виставки та події
-          </a>
-          <a
-            href="#bottomList"
-            class="menuTop__introduce--link4">
-            Контакти
-          </a>
-        </div>
-        <div class="menuTop__line"></div>
-        <div class="menuTop__schedule">
-          <ul class="menuTop__schedule--list"></li>
-            <li class="menuTop__schedule--workDay">
-              Графік роботи
-            </li>
+      <div class="containerMenu">
+        <div class="menuTop">  
+          <div class="menuTop__introduce">
+            <a
+              href="#" 
+              class="menuTop__introduce--logo">
+            </a>
+            <a
+              href="#galery"
+              class="menuTop__introduce--link1">
+              Галерея
+            </a>
+            <a
+              href="#actualEvents"
+              class="menuTop__introduce--link2">
+              Про нас
+            </a>
+            <a
+              href="#subscribe"
+              class="menuTop__introduce--link3">
+              Виставки та події
+            </a>
+            <a
+              href="#bottomList"
+              class="menuTop__introduce--link4">
+              Контакти
+            </a>
+          </div>
+          <div class="menuTop__line"></div>
+          <div class="menuTop__schedule">
+            <ul class="menuTop__schedule--list"></li>
+              <li class="menuTop__schedule--workDay">
+                Графік роботи
+              </li>
+              <br>
+              <li class="menuTop__schedule--workDay">
+                <time>12:00 - 20:00</time>
+                середа
+              </li>
+              <li class="menuTop__schedule--workDay">
+                <time>12:00 - 20:00</time>
+                четвер
+              </li>
+              <li class="menuTop__schedule--workDay">
+                <time>12:00 - 20:00</time>
+                п'ятниця
+              </li>
+              <li class="menuTop__schedule--workDay">
+                <time>11:00 - 19:00</time>
+                субота
+              </li>
+              <li class="menuTop__schedule--workDay">
+                <time>11:00 - 19:00</time>
+                неділя
+              </li>
+            </ul>
             <br>
-            <li class="menuTop__schedule--workDay">
-              <time>12:00 - 20:00</time>
-              середа
-            </li>
-            <li class="menuTop__schedule--workDay">
-              <time>12:00 - 20:00</time>
-              четвер
-            </li>
-            <li class="menuTop__schedule--workDay">
-              <time>12:00 - 20:00</time>
-              п'ятниця
-            </li>
-            <li class="menuTop__schedule--workDay">
-              <time>11:00 - 19:00</time>
-              субота
-            </li>
-            <li class="menuTop__schedule--workDay">
-              <time>11:00 - 19:00</time>
-              неділя
-            </li>
-          </ul>
-          <br>
-          <p class="menuTop__schedule--weekend">
-            <strong>Вихідні:</strong> понеділок, вівторок
-            <br> 
-            Каса припиняє роботу за 1
-            годину до закриття музею
-          </p>
+            <p class="menuTop__schedule--weekend">
+              <strong>Вихідні:</strong> понеділок, вівторок
+              <br> 
+              Каса припиняє роботу за 1
+              годину до закриття музею
+            </p>
+          </div>
         </div>
       </div>
       <div class="menuBottom"></div>
@@ -246,11 +248,7 @@
     <section class="page__section bottomList" id="bottomList">
       <div class="bottomList__links">
         <a href="#" class="bottomList__links--logo">
-          <p class="bottomList__links--logo">
-            NA
-            <br>
-            MU
-          </p>
+          NA<br>MU
         </a>
         <a
           href="https://www.facebook.com"
