--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,408 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <link rel="icon" href="./images/NAMU-logo.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <title>Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header">
+      <div class="header-image">
+        <img
+          src="./images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png"
+          alt="img"
+          class="header-image__link"
+        >
+      </div>
+      <div class="conteiner">
+        <div class="header__content">
+          <div class="top-bar">
+            <a href="#page__menu" class="top-bar__menu">
+              <img
+              src="./images/baseline-menu-24px.png"
+              alt="menu"
+              class="top-bar__menu-link"
+            >
+            </a>
+
+            <a href="#" class=" top-bar__logo">
+              <img
+                src="./images/NAMU-logo.png"
+                alt="NAMU"
+                class="top-bar__logo-link"
+              >
+            </a>
+          </div>
+          <div class="header__bottom">
+            <h1 class="header__bottom-title">ХУДОЖНІЙ МУЗЕЙ</h1>
+            <div class="header__button">
+              <p class="header__button-description">КВИТКИ</p>
+              <a href="#exhibition" class="header__button-link">
+                <img
+                  src=".//images/arrow_right-24px.png"
+                  alt="arrow"
+                  class="header__button-img"
+                >
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <aside class="page__menu" id="page__menu">
+      <div class="conteiner">
+        <div class="page__menu__content">
+          <div class="page__menu-bar">
+            <a href="#" class="page__menu-bar__icon--close"></a>
+
+            <nav class="nav">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a class="nav__link" href="#gallary">Галерея</a>
+
+                  <a class="nav__link" href="#events">Виставки та події</a>
+                </li>
+
+                <li class="nav__item">
+                  <a class="nav__link" href="#subscription">Про Нас</a>
+
+                  <a class="nav__link" href="#contacts">Контакти</a>
+                </li>
+              </ul>
+            </nav>
+
+          </div>
+
+          <div class="page__menu__line"></div>
+
+          <div class="page__menu__schedule">
+            <h3 class="page__menu__schedule-title">Графік роботи</h3>
+            <div class="page__menu__schedule-content">
+              <ul class="page__menu__schedule__item">
+                <li class="page__menu__schedule__link">12:00 — 20:00 <span class="page__menu__schedule-text">середа</span></li>
+                <li class="page__menu__schedule__link">12:00 — 20:00 <span class="page__menu__schedule-text">четвер</span></li>
+                <li class="page__menu__schedule__link">12:00 — 20:00 <span class="page__menu__schedule-text">п’ятниця</span></li>
+                <li class="page__menu__schedule__link">11:00 — 19:00 <span class="page__menu__schedule-text">субота</span></li>
+                <li class="page__menu__schedule__link">11:00 — 19:00 <span class="page__menu__schedule-text">неділя</span></li>
+              </ul>
+
+              <p class="page__menu__schedule-description">
+                Вихідні:
+                <span class="page__menu__schedule-text">понеділок, вівторок<br>
+                Каса припиняє роботу за 1 годину<br>
+                до закриття музею
+                </span>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </aside>
+
+    <main class="main">
+      <div class="conteiner">
+        <div class="main__content">
+          <h2 class="main__content__title" id="events">Актуальні події</h2>
+
+          <section class="section">
+            <article class="section__img">
+              <img
+                src="./images/section-img-1.png"
+                alt="img"
+                class="section__img__link"
+              >
+            </article>
+
+            <div class="section__conteiner">
+              <article class="section__date">
+                <p class="section__date-name" id="exhibition">ВИСТАВКА</p>
+                <p class="section__date-period">26.08-29.11.2019</p>
+              </article>
+
+              <article class="section__title">
+                <h3 class="section__title-text">Йду і повертаюсь</h3>
+                <div class="section__title-square"></div>
+              </article>
+
+              <p class="section__description">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+          </section>
+
+          <section class="section">
+            <article class="section__img">
+              <img
+                src="./images/section-img-2.png"
+                alt="img"
+                class="section__img__link"
+              >
+            </article>
+
+            <div class="section__conteiner">
+              <article class="section__date">
+                <p class="section__date-name">ВИСТАВКА</p>
+                <p class="section__date-period">26.08-29.11.2019</p>
+              </article>
+
+              <article class="section__title">
+                <h3 class="section__title-text">І спогади і мрії</h3>
+                <div class="section__title-square"></div>
+              </article>
+
+              <p class="section__description">
+                Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </section>
+        </div>
+      </div>
+
+      <section class="section__bottom">
+        <img
+        src="./images/section-img-3.png"
+        alt="img"
+        class="section__bottom__img"
+      >
+      </section>
+
+      <div class="conteiner">
+        <div class="main__content">
+          <section class="lecture">
+            <article class="lecture__date">
+              <p class="section__date-name lecture-name">ЛЕКЦІЯ</p>
+              <p class="section__date-period lecture-period">26/08/2019 - 11:00</p>
+            </article>
+
+            <article class="section__title lecture__title">
+              <h3 class="section__title-text lecture__title-text">Від класицизму до романтизму</h3>
+            </article>
+          </section>
+
+          <section class="gallery" id="gallary">
+            <h1 class="gallery__title">Галерея</h1>
+
+            <div class="gallery__slider">
+              <div class="gallery__slider__slides">
+                <input
+                type="radio"
+                name="button"
+                id="s1"
+                checked
+                >
+
+                <input
+                  type="radio"
+                  name="button"
+                  id="s2"
+                >
+
+                <input
+                  type="radio"
+                  name="button"
+                  id="s3"
+                >
+
+                <input
+                  type="radio"
+                  name="button"
+                  id="s4"
+                >
+
+                <div class="gallery__slider__slide s1">
+                  <img
+                    src="./images/slider/slider-img-1.png"
+                    alt="img-1"
+                    class="gallery__slider__slide__img"
+                  >
+                </div>
+
+                <div class="gallery__slider__slide s2">
+                  <img
+                    src="./images/slider/slider-img-2.png"
+                    alt="img-1"
+                    class="gallery__slider__slide__img"
+                  >
+                </div>
+
+                <div class="gallery__slider__slide s3">
+                  <img
+                    src="./images/slider/slider-img-3.png"
+                    alt="img-1"
+                    class="gallery__slider__slide__img"
+                  >
+                </div>
+
+                <div class="gallery__slider__slide s4">
+                  <img
+                    src="./images/slider/slider-img-4.png"
+                    alt="img-1"
+                    class="gallery__slider__slide__img"
+                  >
+                </div>
+
+                <div class="gallery__slider__navigation">
+                  <label for="s1" class="gallery__slider__bar bar1"></label>
+                  <label for="s2" class="gallery__slider__bar bar2"></label>
+                  <label for="s3" class="gallery__slider__bar bar3"></label>
+                  <label for="s4" class="gallery__slider__bar bar4"></label>
+                </div>
+              </div>
+            </div>
+          </section>
+        </div>
+      </div>
+
+      <div class="subscription" id="subscription">
+        <div class="subscription__wrapper">
+          <h1 class="subscription__title">Підписка</h1>
+
+          <p class="subscription__description">Бути в курсі всіх актуальних подій та останніх новин.</p>
+        </div>
+
+        <form
+          onsubmit="this.reset(); return false"
+          action="http://localhost:8080/api"
+          method="post"
+          class="subscription__form"
+          name="contact-us__form"
+          >
+          <input
+              class="subscription__form__email"
+              type="email"
+              name="email"
+              placeholder="E-mail"
+              autocomplete="on"
+            >
+
+          <button class="subscription__form__button">
+            <img
+                src=".//images/arrow_right_black-24px.png"
+                alt="arrow"
+                class="subscription__form__button-img"
+              >
+            </a>
+          </button>
+        </form>
+      </div>
+    </main>
+
+    <footer class="footer" id="contacts">
+      <div class="footer__bar">
+        <a href="#" class=" footer__bar__logo">
+          <img
+            src="./images/NAMU-logo.png"
+            alt="NAMU"
+            class="footer__bar__logo-link"
+          >
+        </a>
+
+        <div class="footer__bar__icons">
+          <a
+            href="https://uk-ua.facebook.com"
+            target="_blank"
+            class="footer__bar__icons__item"
+          >
+            <img
+              src="./images/icons/facebook-logo.png"
+              alt="facebook"
+              class="footer__bar__icons-link"
+            >
+          </a>
+
+          <a
+            href="https://www.instagram.com"
+            target="_blank"
+            class="footer__bar__icons__item"
+          >
+            <img
+              src="./images/icons/instagram-logo.png"
+              alt="facebook"
+              class="footer__bar__icons-link"
+            >
+          </a>
+        </div>
+      </div>
+
+      <div class="page__menu__schedule footer__schedule">
+        <h3 class="page__menu__schedule-title">Графік роботи</h3>
+        <div class="page__menu__schedule-content footer__schedule-content">
+          <ul class="page__menu__schedule__item">
+            <li class="page__menu__schedule__link">12:00 — 20:00 <span class="page__menu__schedule-text">середа</span></li>
+            <li class="page__menu__schedule__link">12:00 — 20:00 <span class="page__menu__schedule-text">четвер</span></li>
+            <li class="page__menu__schedule__link">12:00 — 20:00 <span class="page__menu__schedule-text">п’ятниця</span></li>
+            <li class="page__menu__schedule__link">11:00 — 19:00 <span class="page__menu__schedule-text">субота</span></li>
+            <li class="page__menu__schedule__link">11:00 — 19:00 <span class="page__menu__schedule-text">неділя</span></li>
+          </ul>
+
+          <p class="page__menu__schedule-description">
+            Вихідні:
+            <span class="page__menu__schedule-text">понеділок, вівторок<br>
+            Каса припиняє роботу за 1 годину<br>
+            до закриття музею
+            </span>
+          </p>
+        </div>
+      </div>
+
+      <div class="page__menu__schedule footer__schedule footer__contacts">
+        <h3 class="page__menu__schedule-title">Контакти:</h3>
+        <div class="page__menu__schedule-text">
+          вул. М.<br class="br">
+          Грушевського, 6;<br class="br">
+          Київ, 01001<br>
+          тел. +38 (044)<br class="br">
+          278-13-57<br>
+          факс +38 (044)<br class="br">
+          278-74-54<br>
+          e-mail:<br class="br">
+          info@namu.kiev.ua
+        </div>
+      </div>
+
+      <div class="footer__line">
+        <a href="#" class="footer__line__arrow">
+          <img
+            src="./images/icons/footer_arrow-up.png"
+            alt="arrow-up"
+            class="footer__line__arrow-up"
+          >
+        </a>
+      </div>
+
+      <div class="footer__menu">
+        <nav class="nav footer__nav">
+          <ul class="nav__list footer__nav__list">
+            <li class="nav__item footer__nav__item">
+              <a class="nav__link footer__nav__link" href="#gallary">Галерея</a>
+
+              <a class="nav__link footer__nav__link" href="#events">Виставки та події</a>
+            </li>
+
+            <li class="nav__item">
+              <a class="nav__link footer__nav__link" href="#subscription">Про Нас</a>
+
+              <a class="nav__link footer__nav__link" href="#contacts">Контакти</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+
+      <div class="footer__bottom">
+        <span class="footer__bottom__link">Designed by Zhyriada Marina</span>
+
+        <span class="footer__bottom__link">Copyright © 2019. All Rights Reserved.</span>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
