add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -290,7 +290,6 @@
                 alt="arrow"
                 class="subscription__form__button-img"
               >
-            </a>
           </button>
         </form>
       </div>
@@ -357,15 +356,19 @@
       <div class="page__menu__schedule footer__schedule footer__contacts">
         <h3 class="page__menu__schedule-title">Контакти:</h3>
         <div class="page__menu__schedule-text">
-          вул. М.<br class="br">
-          Грушевського, 6;<br class="br">
-          Київ, 01001<br>
-          тел. +38 (044)<br class="br">
-          278-13-57<br>
-          факс +38 (044)<br class="br">
-          278-74-54<br>
-          e-mail:<br class="br">
-          info@namu.kiev.ua
+          <a
+            href="https://www.google.com.ua/maps/search/%D0%B2%D1%83%D0%BB.+%D0%9C.+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6;+%D0%9A%D0%B8%D1%97%D0%B2,+01001/@50.4489327,30.5251253,15z?hl=ru&entry=ttu"
+            class="page__menu__schedule-text__link"
+            target="_blank"
+          >
+            вул. М. Грушевського, 6; Київ, 01001
+          </a>
+
+          <a href="tel:+38 (044) 278-13-57" class="page__menu__schedule-text__link">тел. +38 (044) 278-13-57</a>
+
+          <a href="tel:+38 (044) 278-74-54" class="page__menu__schedule-text__link"> факс +38 (044) 278-74-54</a>
+
+          <a href="mailto:info@namu.kiev.ua" class="page__menu__schedule-text__link"> e-mail: info@namu.kiev.ua</a>
         </div>
       </div>
 
