--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     <title>Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body class="page__body page__body--with-menu">
+  <body class="page__body">
     <header class="header"> 
       <div class="header__museum"></div>
       <div class="container">
