add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,14 @@
           alt="img"
           class="header-image__link"
         >
+
+        <a href="#" class=" top-bar__logo">
+          <img
+            src="./images/NAMU-logo.png"
+            alt="NAMU"
+            class="top-bar__logo-link"
+          >
+        </a>
       </div>
       <div class="conteiner">
         <div class="header__content">
@@ -31,14 +39,6 @@
               alt="menu"
               class="top-bar__menu-link"
             >
-            </a>
-
-            <a href="#" class=" top-bar__logo">
-              <img
-                src="./images/NAMU-logo.png"
-                alt="NAMU"
-                class="top-bar__logo-link"
-              >
             </a>
           </div>
           <div class="header__bottom">
@@ -98,8 +98,8 @@
               <p class="page__menu__schedule-description">
                 Вихідні:
                 <span class="page__menu__schedule-text">понеділок, вівторок<br>
-                Каса припиняє роботу за 1 годину<br>
-                до закриття музею
+                Каса припиняє роботу за 1 годину
+                до<br>закриття музею
                 </span>
               </p>
             </div>
@@ -366,7 +366,7 @@
 
           <a href="tel:+38 (044) 278-13-57" class="page__menu__schedule-text__link">тел. +38 (044) 278-13-57</a>
 
-          <a href="tel:+38 (044) 278-74-54" class="page__menu__schedule-text__link"> факс +38 (044) 278-74-54</a>
+          <a href="tel:+38 (044) 278-74-54" class="page__menu__schedule-text__link"> факс +38 (044)<br> 278-74-54</a>
 
           <a href="mailto:info@namu.kiev.ua" class="page__menu__schedule-text__link"> e-mail: info@namu.kiev.ua</a>
         </div>
