add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -240,10 +240,10 @@
             </div>
           </div>
           <div class="slider__navigation">
-            <label for="r1" class="slider__bar"></label>
+            <label for="r1" class="slider__bar slider__bar--active"></label>
             <label for="r2" class="slider__bar"></label>
             <label for="r3" class="slider__bar"></label>
-            <label for="r4" class="slider__bar"></label>
+            <label for="r4" class="slider__bar slider__bar--tablet-display-none"></label>
           </div>
         </div>
       </div>
@@ -261,7 +261,6 @@
           </div>
           <div class="slider__grid-picture4"><img  class="slider__grid-img" src="images/slider-imgs/slider-grid/img4.png" alt="nature"></div>
         </div>
-      </div>
       </div>
 
       <div class="subscription" id="subscription">
@@ -319,7 +318,6 @@
           </div>
         </div>
       </div>
-
     </main>
 
     <footer class="footer">
