add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -99,7 +99,7 @@
                 Вихідні:
                 <span class="page__menu__schedule-text">понеділок, вівторок<br>
                 Каса припиняє роботу за 1 годину
-                до<br>закриття музею
+                до закриття музею
                 </span>
               </p>
             </div>
